test/error/error.input092.zc
Type mismatch: literal vs. variable on line 1
